Navbar footer no longer overlaps any buttons
UI Tweak:
• Navbar footer no longer overlaps any buttons and stretches across entire navbar

Bug fix:
• Fixed issue where navbar footer would overlap ontop of "Manage Account" button (again) if the screen resolution exactly fit the offset height of to start overflow-y

In progress:
• Working on getting the eFP-Seq Browser to work for internet explorer

TODO:
• TMM or TPM additional normalization
• Expand creation of private database to include adding from public and private database to your creation
• Add documentation to ALL code

Known bugs:
• After generating new data, scrolling up doesn’t work unless user scrolls down first
• Does not work on IE
• Controls are not in either of the Excel exporters
• When selecting more than two datasets to add form existing data to generate new data, it does not add to the generated new data modal
• Google Drive repos do not work for IGB links

--- a/cgi-bin/core/style.css
+++ b/cgi-bin/core/style.css
@@ -493,16 +493,6 @@ Credits and loves goes out to the Bootstrap team: https://github.com/orgs/twbs/p
   font-size: 2em;
 }
 
-.navbar_menu_footer {
-  z-index: 100;
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  padding-top: 14px;
-  background: #3d3d3d;
-  margin-left: -16px;
-}
-
 .navbar_menu_footer_overflow {
   z-index: 100;
   position: sticky;
@@ -511,6 +501,7 @@ Credits and loves goes out to the Bootstrap team: https://github.com/orgs/twbs/p
   padding-top: 14px;
   padding-bottom: 40px;
   background: #3d3d3d;
+  margin-left: -10%;
 }
 
 .navbar_menu_input {
